--- a/Bonsai64/Bonsai64.csproj
+++ b/Bonsai64/Bonsai64.csproj
@@ -10,6 +10,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <Version>2.5.0</Version>
     <OutputType>Exe</OutputType>
+    <OutputPath>..\Bonsai\bin\$(Configuration)\</OutputPath>
     <ApplicationIcon>..\Bonsai.Editor\Bonsai.ico</ApplicationIcon>
     <ApplicationManifest>App.manifest</ApplicationManifest>
   </PropertyGroup>
