--- a/Bonsai.Templates/Bonsai.Templates/Bonsai.Templates.csproj
+++ b/Bonsai.Templates/Bonsai.Templates/Bonsai.Templates.csproj
@@ -15,7 +15,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Bonsai.Templates</RootNamespace>
     <AssemblyName>BonsaiTemplates</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <GeneratePkgDefFile>false</GeneratePkgDefFile>
     <IncludeAssemblyInVSIXContainer>false</IncludeAssemblyInVSIXContainer>
     <IncludeDebugSymbolsInVSIXContainer>false</IncludeDebugSymbolsInVSIXContainer>
@@ -44,11 +44,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\..\bin\Bonsai.Core.2.4.1.nupkg">
+    <Content Include="..\..\bin\Release\Bonsai.Core.2.5.0.nupkg">
       <Link>Packages\Bonsai.Core.2.4.1.nupkg</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="..\..\bin\Bonsai.Design.2.4.1.nupkg">
+    <Content Include="..\..\bin\Release\Bonsai.Design.2.5.0.nupkg">
       <Link>Packages\Bonsai.Design.2.4.1.nupkg</Link>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
