--- a/Bonsai.Templates/Bonsai.PackageTemplate/Bonsai.PackageTemplate.csproj
+++ b/Bonsai.Templates/Bonsai.PackageTemplate/Bonsai.PackageTemplate.csproj
@@ -57,8 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="Source1.cs" />
     <None Include="launchSettings.json" />
-    <None Include="Transform1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ProjectTemplate.csproj" />
