--- a/Bonsai/Bonsai.csproj
+++ b/Bonsai/Bonsai.csproj
@@ -44,4 +44,10 @@
               InternalizeExcludeAssemblies="@(InternalizeExcludeAssemblies)"
               WorkingDirectory="$(WorkingDirectory)" />
   </Target>
+  <Target Name="NuGetConfig" AfterTargets="Build">
+    <WriteLinesToFile File="$(TargetDir)NuGet.config"
+                      Lines="$([System.IO.File]::ReadAllText('Properties\NuGet.config').Replace('%PackageDir%','$(ProjectDir)..\bin\$(Configuration)'))"
+                      Overwrite="true"
+                      WriteOnlyWhenDifferent="true" />
+  </Target>
 </Project>
