--- a/Bonsai.StarterPack/Bonsai.StarterPack.csproj
+++ b/Bonsai.StarterPack/Bonsai.StarterPack.csproj
@@ -6,7 +6,7 @@
     <PackageTags>Bonsai Rx Starter Pack</PackageTags>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <TargetFramework>net462</TargetFramework>
-    <Version>2.5.1</Version>
+    <Version>2.5.2</Version>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bonsai.Arduino\Bonsai.Arduino.csproj" />
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\Bonsai.Dsp.Design\Bonsai.Dsp.Design.csproj" />
     <ProjectReference Include="..\Bonsai.Osc\Bonsai.Osc.csproj" />
     <ProjectReference Include="..\Bonsai.Scripting\Bonsai.Scripting.csproj" />
+    <ProjectReference Include="..\Bonsai.Shaders.Design\Bonsai.Shaders.Design.csproj" />
     <ProjectReference Include="..\Bonsai.System.Design\Bonsai.System.Design.csproj" />
     <ProjectReference Include="..\Bonsai.Vision.Design\Bonsai.Vision.Design.csproj" />
     <ProjectReference Include="..\Bonsai.Windows.Input\Bonsai.Windows.Input.csproj" />
