--- a/Bonsai.StarterPack/Bonsai.StarterPack.csproj
+++ b/Bonsai.StarterPack/Bonsai.StarterPack.csproj
@@ -6,11 +6,12 @@
     <PackageTags>Bonsai Rx Starter Pack</PackageTags>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <TargetFramework>net462</TargetFramework>
-    <Version>2.5.2</Version>
+    <Version>2.5.3</Version>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Bonsai.Arduino\Bonsai.Arduino.csproj" />
     <ProjectReference Include="..\Bonsai.Audio\Bonsai.Audio.csproj" />
+    <ProjectReference Include="..\Bonsai.Design.Visualizers\Bonsai.Design.Visualizers.csproj" />
     <ProjectReference Include="..\Bonsai.Dsp.Design\Bonsai.Dsp.Design.csproj" />
     <ProjectReference Include="..\Bonsai.Osc\Bonsai.Osc.csproj" />
     <ProjectReference Include="..\Bonsai.Scripting\Bonsai.Scripting.csproj" />
