--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Authors>Gonçalo Lopes</Authors>
     <Copyright>Copyright © Gonçalo Lopes 2011-2020</Copyright>
-    <ProjectUrl>https://bonsai-rx.org</ProjectUrl>
+    <PackageProjectUrl>https://bonsai-rx.org</PackageProjectUrl>
     <PackageLicenseUrl>https://bonsai-rx.org/license</PackageLicenseUrl>
     <PackageIconUrl>https://bonsai-rx.org/assets/images/bonsai.png</PackageIconUrl>
     <PackageOutputPath>..\bin\$(Configuration)</PackageOutputPath>
