--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,7 +9,10 @@
     <PackageOutputPath>..\bin\$(Configuration)</PackageOutputPath>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IncludeSymbols Condition="'$(Configuration)'=='Release'">true</IncludeSymbols>
+    <SymbolPackageFormat Condition="'$(Configuration)'=='Release'">snupkg</SymbolPackageFormat>
     <GenerateDocumentationFile Condition="'$(Configuration)'=='Release'">false</GenerateDocumentationFile>
+    <RepositoryUrl>https://github.com/bonsai-rx/bonsai.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
     <LangVersion>8.0</LangVersion>
     <Features>strict</Features>
   </PropertyGroup>
