--- a/Bonsai.Templates/Bonsai.PackageTemplate/ProjectTemplate.csproj
+++ b/Bonsai.Templates/Bonsai.PackageTemplate/ProjectTemplate.csproj
@@ -9,7 +9,7 @@
     <PackageProjectUrl></PackageProjectUrl>
     <PackageLicenseExpression></PackageLicenseExpression>
     <PackageIcon></PackageIcon>
-    <PackageOutputPath>..\bin\$(Configuration)</PackageOutputPath>
+    <PackageOutputPath></PackageOutputPath>
     <PackageTags>Bonsai Rx $projectname$</PackageTags>
     <TargetFramework>net462</TargetFramework>
     <Features>strict</Features>
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Bonsai.Core" Version="2.5.0" />
+    <PackageReference Include="Bonsai.Core" Version="2.6.0" />
   </ItemGroup>
 
 </Project>
