--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,10 +5,11 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  workflow_dispatch
  
 jobs:
   build:
- 
+    name: Build Bootstrapper
     runs-on: windows-latest
  
     steps:
@@ -33,6 +34,13 @@ jobs:
     - name: Run Tests
       run: msbuild Bonsai.Tests.proj
 
+  installer:
+    name: Build Installer
+    needs: build
+    if: github.event_name == 'workflow_dispatch'
+    runs-on: windows-latest
+
+    steps:
     - name: Build Templates
       run: msbuild Bonsai.Templates/Bonsai.Templates.sln /p:Configuration=Release
 
