--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,9 @@ jobs:
 
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1
+
+    - name: Setup VSTest.console.exe
+      uses: darenm/Setup-VSTest@v1
        
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1.0.5
