--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,10 +36,10 @@ jobs:
       run: msbuild Bonsai.sln /t:Bonsai32 /p:Configuration=Release
 
     - name: Run Core Tests
-      run: vstest.console Bonsai.Core.Tests\bin\Release\net462\Bonsai.Core.Tests.dll
+      run: vstest.console .\Bonsai.Core.Tests\bin\Release\net462\Bonsai.Core.Tests.dll
       
     - name: Run System Tests
-      run: vstest.console Bonsai.System.Tests\bin\Release\net462\Bonsai.System.Tests.dll
+      run: vstest.console .\Bonsai.System.Tests\bin\Release\net462\Bonsai.System.Tests.dll
 
   installer:
     name: Build Installer
