--- a/Bonsai.StarterPack/Bonsai.StarterPack.csproj
+++ b/Bonsai.StarterPack/Bonsai.StarterPack.csproj
@@ -5,8 +5,15 @@
     <PackageTags>Bonsai Rx Starter Pack</PackageTags>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <IncludeBuildOutput>false</IncludeBuildOutput>
+    <IncludeSymbols>false</IncludeSymbols>
     <TargetFramework>net462</TargetFramework>
     <VersionPrefix>2.8.1</VersionPrefix>
+
+    <!--
+    This warning basically happens because this package has no assemblies but does have dependencies
+    https://github.com/NuGet/Home/issues/8583
+    -->
+    <NoWarn>$(NoWarn);NU5128</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Bonsai.Arduino" Version="2.8.1" />
