--- a/Bonsai/Bonsai.csproj
+++ b/Bonsai/Bonsai.csproj
@@ -14,9 +14,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.Reflection.MetadataLoadContext" Version="7.0.0" PrivateAssets="all" />
-    <PackageReference Include="ILRepack.MSBuild.Task" Version="2.0.13">
+    <PackageReference Include="ILRepack" Version="2.0.34">
       <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -39,45 +39,74 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <Target Name="ILRepack" AfterTargets="Build">
-    <PropertyGroup>
-      <WorkingDirectory>$(MSBuildThisFileDirectory)bin\$(Configuration)\$(TargetFramework)</WorkingDirectory>
-    </PropertyGroup>
-    <ItemGroup>
-      <InputAssemblies Include="System.Buffers.dll" />
-      <InputAssemblies Include="System.Memory.dll" />
-      <InputAssemblies Include="System.Numerics.Vectors.dll" />
-      <InputAssemblies Include="System.Collections.Immutable.dll" />
-      <InputAssemblies Include="System.Reflection.Metadata.dll" />
-      <InputAssemblies Include="System.Reflection.MetadataLoadContext.dll" />
-      <InputAssemblies Include="System.Runtime.CompilerServices.Unsafe.dll" />
-      <InputAssemblies Include="Bonsai.Configuration.dll" />
-      <InputAssemblies Include="Bonsai.NuGet.dll" />
-      <InputAssemblies Include="Bonsai.NuGet.Design.dll" />
-      <InputAssemblies Include="Newtonsoft.Json.dll" />
-      <InputAssemblies Include="NuGet.Common.dll" />
-      <InputAssemblies Include="NuGet.Configuration.dll" />
-      <InputAssemblies Include="NuGet.Frameworks.dll" />
-      <InputAssemblies Include="NuGet.Packaging.dll" />
-      <InputAssemblies Include="NuGet.Protocol.dll" />
-      <InputAssemblies Include="NuGet.Resolver.dll" />
-      <InputAssemblies Include="NuGet.Versioning.dll" />
-    </ItemGroup>
-    <ItemGroup>
-      <InternalizeExcludeAssemblies Include="^Bonsai.Configuration" />
-    </ItemGroup>
-    <ILRepack Condition="'$(Configuration)'=='Release'"
-              OutputType="$(OutputType)"
-              MainAssembly="$(AssemblyName).exe"
-              OutputAssembly="$(AssemblyName).exe"
-              InputAssemblies="@(InputAssemblies)"
-              InternalizeExcludeAssemblies="@(InternalizeExcludeAssemblies)"
-              WorkingDirectory="$(WorkingDirectory)" />
-  </Target>
+
   <Target Name="NuGetConfig" AfterTargets="Build">
     <WriteLinesToFile File="$(TargetDir)NuGet.config"
                       Lines="$([System.IO.File]::ReadAllText('Properties\NuGet.config').Replace('%PackageDir%','$(PackageOutputPath)'))"
                       Overwrite="true"
                       WriteOnlyWhenDifferent="true" />
+  </Target>
+
+  <!-- ================================================================================================================
+    IL Repack Infrastructure
+  ==================================================================================================================-->
+  <Target Name="ConfigureRepack">
+    <PropertyGroup>
+      <RepackedOutputPath>$(BaseOutputPath)$(ArtifactsPivots)-repacked\</RepackedOutputPath>
+      <RepackedOutputFilePath>$(RepackedOutputPath)$(TargetFileName)</RepackedOutputFilePath>
+      <RepackedOutputSymbolFilePath>$([System.IO.Path]::ChangeExtension('$(RepackedOutputFilePath)', '.pdb'))</RepackedOutputSymbolFilePath>
+    </PropertyGroup>
+  </Target>
+
+  <Target Name="Repack" DependsOnTargets="ConfigureRepack">
+    <Error Condition="!$([System.OperatingSystem]::IsWindows())" Text="Repacking is only supported on Windows." />
+    <Error Condition="!Exists('$(OutputPath)Bonsai.exe')" Text="Project must be built before repacking. '$(OutputPath)Bonsai.exe' not found." />
+    <Error Condition="'$(RepackedOutputPath)' == '' or '$(RepackedOutputFilePath)' == ''" Text="Repacked output path not configured." />
+
+    <MakeDir Directories="$(RepackedOutputPath)" />
+
+    <PropertyGroup>
+      <_IlRepackCommand>
+"$(ILRepack)"
+/verbose
+/out:"$(RepackedOutputFilePath)"
+/internalize:"$(MSBuildThisFileDirectory)InternalizeExcludePatterns"
+"$(OutputPath)Bonsai.exe"
+"$(OutputPath)System.Buffers.dll"
+"$(OutputPath)System.Memory.dll"
+"$(OutputPath)System.Numerics.Vectors.dll"
+"$(OutputPath)System.Collections.Immutable.dll"
+"$(OutputPath)System.Reflection.Metadata.dll"
+"$(OutputPath)System.Reflection.MetadataLoadContext.dll"
+"$(OutputPath)System.Runtime.CompilerServices.Unsafe.dll"
+"$(OutputPath)Bonsai.Configuration.dll"
+"$(OutputPath)Bonsai.NuGet.dll"
+"$(OutputPath)Bonsai.NuGet.Design.dll"
+"$(OutputPath)Newtonsoft.Json.dll"
+"$(OutputPath)NuGet.Common.dll"
+"$(OutputPath)NuGet.Configuration.dll"
+"$(OutputPath)NuGet.Frameworks.dll"
+"$(OutputPath)NuGet.Packaging.dll"
+"$(OutputPath)NuGet.Protocol.dll"
+"$(OutputPath)NuGet.Resolver.dll"
+"$(OutputPath)NuGet.Versioning.dll"
+      </_IlRepackCommand>
+    </PropertyGroup>
+    <Exec WorkingDirectory="$(RepackedOutputPath)" Command="$(_IlRepackCommand.Replace('%0D', ' ').Replace('%0A', ' '))" UseCommandProcessor="false" />
+  </Target>
+
+  <Target Name="UseRepackOutputForPackage" Condition="'$(UseRepackForBootstrapperPackage)' == 'true'" AfterTargets="BuiltProjectOutputGroup" DependsOnTargets="ConfigureRepack">
+    <Error Condition="!Exists('$(RepackedOutputFilePath)')" Text="Project must be repacked before repacking. '$(RepackedOutputFilePath)' not found." />
+    <ItemGroup>
+      <BuiltProjectOutputGroupOutput Remove="@(BuiltProjectOutputGroupOutput)" />
+      <BuiltProjectOutputGroupOutput Include="$(RepackedOutputFilePath)" />
+    </ItemGroup>
+  </Target>
+  <Target Name="UseRepackOutputForSymbolPackage" Condition="'$(UseRepackForBootstrapperPackage)' == 'true'" AfterTargets="DebugSymbolsProjectOutputGroup" DependsOnTargets="ConfigureRepack">
+    <Error Condition="!Exists('$(RepackedOutputSymbolFilePath)')" Text="Project must be repacked before repacking. '$(RepackedOutputFilePath)' not found." />
+    <ItemGroup>
+      <DebugSymbolsProjectOutputGroupOutput Remove="@(DebugSymbolsProjectOutputGroupOutput)" />
+      <DebugSymbolsProjectOutputGroupOutput Include="$(RepackedOutputSymbolFilePath)" />
+    </ItemGroup>
   </Target>
 </Project>
