Fix redundant assembly resolves resulting in redundant assembly loads
Also added copying the NuGet.config to the repack output directory for ease of testing.

Fixes https://github.com/bonsai-rx/bonsai/issues/1901

--- a/Bonsai/Bonsai.csproj
+++ b/Bonsai/Bonsai.csproj
@@ -102,6 +102,7 @@
       </_IlRepackCommand>
     </PropertyGroup>
     <Exec WorkingDirectory="$(RepackedOutputPath)" Command="$(_IlRepackCommand.Replace('%0D', ' ').Replace('%0A', ' '))" UseCommandProcessor="false" />
+    <Copy SourceFiles="$(TargetDir)NuGet.config" DestinationFolder="$(RepackedOutputPath)" />
   </Target>
 
   <Target Name="UseRepackOutputForPackage" Condition="'$(UseRepackForBootstrapperPackage)' == 'true'" AfterTargets="BuiltProjectOutputGroup" DependsOnTargets="ConfigureRepack">
